--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,98 @@
-.App {
-  text-align: center;
+/* Navbar */
+.main-nav {
+  display: grid;
+  grid-template-rows: 50px;
+  border-radius: 12px;
+  background-color: rgb(40, 40, 40);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main-nav ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.main-nav ul li {
+  list-style: none;
+  margin: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main-nav ul div {
+  display: flex;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+a:hover {
+  color: aquamarine;
+}
+
+/* Register and Login Form */
+.register,
+.login {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  min-height: 450px;
+}
+
+.register form {
+  margin-top: 120px;
+  background-color: rgb(237, 240, 243);
+  width: 500px;
+  height: 500px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  border-radius: 10px;
+}
+
+.login form {
+  margin-top: 120px;
+  background-color: rgb(237, 240, 243);
+  width: 500px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+}
+
+.register form input,
+.login form input {
+  margin: 8px;
+  padding: 4px;
+  width: 450px;
+  height: 50px;
+  text-indent: 5px;
+  border-radius: 10px;
+}
+
+.register form button,
+.login form button {
+  width: 300px;
+  height: 45px;
+  border-radius: 10px;
   color: white;
+  background-color: rgb(40, 40, 40);
+  font-size: 20px;
+  font-weight: 800;
+  text-transform: uppercase;
+  margin: 3px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.forgot {
+  color: blue;
+  text-decoration: underline;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.forgot:hover {
+    color: rgb(24, 24, 27);
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
